Finished chain generation in the report

--- a/doc/relatorio#1.tex
+++ b/doc/relatorio#1.tex
@@ -68,4 +68,8 @@ The algorithm receives three parameters: $n$, $max\_distance$ and $center$; and 
 \end{algorithmic}
 \end{algorithm}
 
+\subsection{Noise}
+The noise is applied to the vector created by $GeneratePoints$
+
+
 \end{document}
