Added file output for tests

--- a/doc/relatorio#1.tex
+++ b/doc/relatorio#1.tex
@@ -239,5 +239,6 @@ We call $p_c$ the probability that we chose the correct side when evaluating $v_
 \end{algorithmic}
 \end{algorithm}
 
+\section{Results}
 \end{document}
 
