--- a/doc/relatorio#1.tex
+++ b/doc/relatorio#1.tex
@@ -240,5 +240,18 @@ We call $p_c$ the probability that we chose the correct side when evaluating $v_
 \end{algorithm}
 
 \section{Results}
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=.5]{time_plot}
+\end{figure}
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=.5]{evaluations_plot}
+\end{figure}
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=.5]{correctness_plot}
+\end{figure}
+
 \end{document}
 
