Updated report with convergence results

--- a/doc/relatorio#1.tex
+++ b/doc/relatorio#1.tex
@@ -305,6 +305,21 @@ After finding the points $v_{lm}$, $v_m$ and $v_{rm}$ we calculate the cost $c$ 
         \centering
         \includegraphics[scale=.5]{correctness_plot_result}
 \end{figure}
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=.5]{convergence_plot_n1000_s1}
+\end{figure}
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=.5]{convergence_plot_n1000_s2}
+\end{figure}
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=.5]{convergence_plot_n1000_s3}
+\end{figure}
+
+
+
 
 
 \end{document}
