--- a/doc/relatorio#1.tex
+++ b/doc/relatorio#1.tex
@@ -310,5 +310,15 @@ After finding the points $v_{lm}$, $v_m$ and $v_{rm}$ we calculate the cost $c$ 
         \includegraphics[scale=.5]{convergence_plot_n1000_s1}
 \end{figure}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=.5]{correctness_plot_ln}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=.5]{correctness_plot_lgn}
+\end{figure}
+
 \end{document}
 
