Updated curve plots in Input Generation section

--- a/doc/relatorio#1.tex
+++ b/doc/relatorio#1.tex
@@ -72,21 +72,21 @@ The chain is generated based on a polynomial of second degree with positive lead
 The noise is applied to the vector created by $GeneratePoints$, by adding to every point $v_i$ a Gaussian error, $\epsilon_i$ with mean zero and stardard deviation $sigma$. We also assume that every pair $\epsilon_i$, $\epsilon_j$  are independent and identically distributed for $i \neq j$.
 
 \begin{figure}[H]
-\caption{Example of a curve generated with $\sigma = 0$}
+\caption{Example of a curve generated with $n = 100$, $center = 0.5$ and $\sigma = 0$}
 \centering
 \includegraphics[scale=.5]{curve_sigma0}
 \end{figure}
 
 \begin{figure}[H]
-\caption{Example of a curve generated with $\sigma = 1$}
+\caption{Example of a curve generated with $n = 100$, $center = 0.5$ and $\sigma = 5$}
 \centering
-\includegraphics[scale=.5]{curve_sigma1}
+\includegraphics[scale=.5]{curve_sigma5}
 \end{figure}
 
 \begin{figure}[H]
-\caption{Example of a curve generated with $\sigma = 2$}
+\caption{Example of a curve generated with $n = 100$, $center = 0.5$ and $\sigma = 10$}
 \centering
-\includegraphics[scale=.5]{curve_sigma2}
+\includegraphics[scale=.5]{curve_sigma10}
 \end{figure}
 
 \newpage
